--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -25,7 +25,7 @@
 <body>
 <div th:replace="~{index::header}"></div>
 <div th:replace="~{index::navbar}"></div>
-<main id="main" class="main" style="margin-top: -0px">
+<main id="main" class="main">
     <div class="chat-container " id="chat-page">
         <div class="users-list">
             <div class="users-list-container">
