--- a/src/main/resources/templates/user/view-all-user.html
+++ b/src/main/resources/templates/user/view-all-user.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-
-
 </head>
 <body>
 <div th:replace="~{index::header}"></div>
@@ -85,17 +83,13 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <div class="container">
             <div class="row">
-                <!-- Single Advisor-->
-                <div class="col-12 col-sm-6 col-lg-3" th:each="user : ${users}">
+                <div class="col-12 col-sm-6 col-lg-3" th:each="user : ${users}" th:unless="${user.staffId == '99-09999'}">
                     <div class="single_advisor_profile wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;" th:data-userid="${user.id}">
-                        <!-- Team Thumb-->
                         <div class="advisor_thumb">
                             <img th:if="${user.photo != null}" th:src="@{${user.photo}}" alt="User Photo" class="img-fluid rounded-circle" style="min-height: 160px;">
                             <img th:unless="${user.photo != null}" th:src="@{/assets/img/default-logo.png}" alt="Default Photo" class="img-fluid rounded-circle" style="min-height: 160px;">
-                            <!-- Social Info-->
                             <div class="social-info"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a></div>
                         </div>
-                        <!-- Team Details-->
                         <div class="single_advisor_details_info">
                             <h6 th:text="${user.name}"></h6>
                             <p class="designation" th:text="${user.dept}"></p>
