--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -758,7 +758,7 @@
                     <div class="col-sm-10">
 
                                 <textarea class="form-control  font-monospace" style="height: 200px; border-radius: 20px; border: none;" name="content"
-                                          id="post-content"></textarea>
+                                          id="content"></textarea>
 
                     </div>
                 </div>
