--- a/src/main/resources/templates/deny/access-denied.html
+++ b/src/main/resources/templates/deny/access-denied.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<head th:replace="~{index::head}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Access Denied</title>
 </head>
-<body>
+<body class="access-deny">
+<div th:replace="~{index::header}"></div>
+<div th:replace="~{index::navbar}"></div>
+<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,900" rel="stylesheet">
+<link rel="stylesheet" th:href="@{/static/assets/css/accessDeny.css}">
+<div id="main" class="main">
 
+    <div id="sign-wrapper">
+        <div id="hole1" class="hole"></div>
+        <div id="hole2" class="hole"></div>
+        <div id="hole3" class="hole"></div>
+        <div id="hole4" class="hole"></div>
+        <div id="headerForAccessDenied">
+            <h1 id="forbiddenH1Tag">403 forbidden</h1>
+            <div id="strike1" class="strike"></div>
+            <div id="strike2" class="strike"></div>
+        </div>
+        <section id="sign-body">
+            <div id="copy-container">
+                <h2 id="forbiddenH2Tag">Authorized Personnel Only</h2>
+                <p id="forbiddenPTag"><strong>Error 403: Forbidden</strong>. You do not have permission to do that.</p>
+            </div>
+            <div id="circle-container">
+                <svg version="1.1" viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
+                    <defs>
+                        <pattern id="image" patternUnits="userSpaceOnUse" height="450" width="450">
+                            <image x="25" y="25" height="450" width="450" xlink:href="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"></image>
+                        </pattern>
+                    </defs>
+                    <circle cx="250" cy="250" r="200" stroke-width="40px" stroke="#ef5350" fill="url(#image)"/>
+                    <line x1="100" y1="100" x2="400" y2="400" stroke-width="40px" stroke="#ef5350"/>
+                </svg>
+            </div>
+        </section>
+    </div>
+
+</div>
+<div th:replace="~{index::footer}"></div>
 </body>
 </html>
