--- a/src/main/resources/static/assets/css/loading.css
+++ b/src/main/resources/static/assets/css/loading.css
@@ -856,3 +856,107 @@ code {
     visibility: visible;
     opacity: 1; 
 }
+
+
+.group-pushable {
+    position: relative;
+    border: none;
+    background: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    transition: filter 250ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .group-shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: hsl(0deg 0% 0% / 0.25);
+    will-change: transform;
+    transform: translateY(2px);
+    transition:
+      transform
+      600ms
+      cubic-bezier(.3, .7, .4, 1);
+  }
+  
+  .group-edge {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: linear-gradient(
+      to left,
+      hsl(192, 100%, 22%) 0%,
+      hsl(0, 2%, 67%) 8%,
+      hsl(0, 7%, 79%) 92%,
+      hsl(209, 100%, 24%) 100%
+    );
+  }
+  
+  .group-front {
+    display: block;
+    position: relative;
+    padding: 12px 27px;
+    border-radius: 12px;
+    font-size: 1.1rem;
+    color: rgb(44, 100, 202);
+    background: hsl(0, 0%, 100%);
+    will-change: transform;
+    transform: translateY(-4px);
+    transition:
+      transform
+      600ms
+      cubic-bezier(.3, .7, .4, 1);
+  }
+  
+  @media (min-width: 768px) {
+    .group-front {
+      font-size: 1.25rem;
+      padding: 12px 42px;
+    }
+  }
+  
+  .group-pushable:hover {
+    filter: brightness(110%);
+    -webkit-filter: brightness(110%);
+  }
+  
+  .group-pushable:hover .group-front {
+    transform: translateY(-6px);
+    transition:
+      transform
+      250ms
+      cubic-bezier(.3, .7, .4, 1.5);
+  }
+  
+  .group-pushable:active .group-front {
+    transform: translateY(-2px);
+    transition: transform 34ms;
+  }
+  
+  .group-pushable:hover .group-shadow {
+    transform: translateY(4px);
+    transition:
+      transform
+      250ms
+      cubic-bezier(.3, .7, .4, 1.5);
+  }
+  
+  .group-pushable:active .group-shadow {
+    transform: translateY(1px);
+    transition: transform 34ms;
+  }
+  
+  .group-pushable:focus:not(:focus-visible) {
+    outline: none;
+  }
